# YummyOS

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  release.yml
apps/control-center/: CMakeLists.txt  resources.qrc
apps/control-center/src/: main.cpp  mainwindow.cpp  mainwindow.h  sidebarwidget.cpp  sidebarwidget.h
apps/control-center/src/pages/: appearancepage.cpp  appearancepage.h  audiopage.cpp  audiopage.h  backuppage.cpp  backuppage.h  bluetoothpage.cpp  bluetoothpage.h  displaypage.cpp  displaypage.h  driverspage.cpp  driverspage.h  gamingpage.cpp  gamingpage.h  networkpage.cpp  networkpage.h  packagespage.cpp  packagespage.h  performancepage.cpp  performancepage.h  powerpage.cpp  powerpage.h  privacypage.cpp  privacypage.h  startupappspage.cpp  startupappspage.h  systeminfopage.cpp  systeminfopage.h  themespage.cpp  themespage.h  updatespage.cpp  updatespage.h  useraccountspage.cpp  useraccountspage.h  wallpaperspage.cpp  wallpaperspage.h
apps/control-center/src/qml/: theme.qml
apps/control-center/src/utils/: configmanager.cpp  configmanager.h  systemutils.cpp  systemutils.h
apps/welcome/: CMakeLists.txt  resources.qrc
apps/welcome/src/: main.cpp
apps/welcome/src/backend/: backend.cpp  backend.h
apps/welcome/src/qml/: main.qml
apps/welcome/src/qml/components/: AppearancePage.qml  DeveloperPage.qml  DonePage.qml  DriversPage.qml  GamingPage.qml  ImportPage.qml  NetworkPage.qml  PageCard.qml  StepIndicator.qml  UpdatesPage.qml
branding/color-schemes/: YummyOS.colors
branding/gtk/YummyOS/: gtk-dark.css  gtk.css
branding/kvantum/YummyOS/: YummyOS.kvconfig
branding/plasma-theme/YummyOS/: metadata.desktop
branding/plasma-theme/YummyOS/contents/: colors  defaults
branding/plasma-theme/YummyOS/contents/layouts/: org.kde.plasma.defaultLayout
branding/plasma/look-and-feel/YummyOS/: metadata.desktop
branding/plasma/look-and-feel/YummyOS/contents/: defaults
branding/plasma/look-and-feel/YummyOS/contents/layouts/: org.kde.plasma.default-layout
branding/plasma/look-and-feel/YummyOS/contents/splash/YummyOS/: splash.qml
branding/plymouth/YummyOS/: GENERATE_ASSETS.md  YummyOS.plymouth  yummyos.script
branding/sddm/YummyOS/: Main.qml  metadata.desktop
branding/sddm/YummyOS/Components/: Clock.qml  Login.qml  LoginForm.qml  Logo.qml  PowerButton.qml
branding/sounds/: README.md
branding/wallpapers/: README.md  generate-wallpapers.sh
config/etc/: fstab  hostname  hosts  locale.gen  makepkg.conf  mkinitcpio.conf  pacman.conf  vconsole.conf
config/etc/NetworkManager/: NetworkManager.conf
config/etc/skel/: .bashrc  .zshrc
config/etc/skel/.config/: kcminputrc  kdeglobals  kwinrc  plasmarc
config/etc/skel/.config/autostart/: yummy-welcome.desktop
config/etc/skel/.config/yummyos/: yummyos.conf
config/etc/skel/.local/share/plasma/look-and-feel/: README.md
config/etc/systemd/: system.conf
config/etc/xdg/: mimeapps.list
config/usr/lib/systemd/system/: yummy-gaming.service  yummy-gaming.target  yummy-performance.service
config/usr/share/applications/: yummy-about.desktop  yummy-backup.desktop  yummy-control-center.desktop  yummy-welcome.desktop
config/usr/share/polkit-1/actions/: org.yummyos.performance.policy  org.yummyos.thememanager.policy
docs/: ARCHITECTURE.md  BUILDING.md  CUSTOMIZATION.md  GAMING.md  PRIVACY.md
scripts/: build-iso.sh  clean-build.sh  verify-build.sh
tests/: run-all-tests.sh  test-backup.sh  test-performance.sh  test-telemetry-check.sh  test-theme-apply.sh
